fix(aboutmodal): scrolling content fade visible <BLANK LINK> Added CSS to fix the fade at the bottom of scrolling content appears now

--- a/packages/cloud-cognitive/src/components/AboutModal/_about-modal.scss
+++ b/packages/cloud-cognitive/src/components/AboutModal/_about-modal.scss
@@ -61,6 +61,10 @@
     bottom: calc(#{$spacing-09} + #{$spacing-08});
   }
 
+  .#{$block-class} .#{$carbon-prefix}--modal-content--overflow-indicator {
+    background-image: linear-gradient(to bottom, #00000000, $ui-01);
+  }
+
   .#{$block-class} .#{$block-class}__links-container {
     margin-top: $spacing-05;
   }
